# ai00_server

./: .gitignore  Cargo.toml
assets/scripts/: convert_safetensors.py
crates/ai00-server/: Cargo.toml
crates/ai00-server/src/: main.rs
crates/ai00-server/src/api/oai/: embed.rs
crates/testss/: Cargo.toml
crates/testss/assets/models/hf_hub/models--cgisky--ai00_rwkv_x060/refs/: main
crates/testss/assets/models/hf_hub/models--cgisky--ai00_rwkv_x060/snapshots/17fb4a7b7ae58967ddcc4aa4414bebba81461116/: README.md
crates/testss/assets/models/hf_hub/models--intfloat--multilingual-e5-small/refs/: main
crates/testss/src/: main.rs
