[package]
name = "testss"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
text-splitter = { version = "^0.13.3", features = ["tokenizers", "code", "markdown"] }

tokenizers = { version = "0.19.1", features = ["http"] }
tokio = { version = "1.29.1", optional = true, features = ["fs", "macros"] }
futures = { version = "0.3.30", optional = true }


[patch.crates-io]
hf-hub = {path = "../../../hf-hub"}
# hf-hub = {git = "https://github.com/cgisky1980/hf-hub"}